package protobuf;

message Nachricht {

	enum NachrichtenTyp {
		KONTROLLNACHRICHT = 0;
		ANWENDUNGSNACHRICHT = 1;
	}
	enum KontrollTyp {
		//Use this option if you want to assign multiple definitions for the same value
		//For example: "INITIALISIEREN = 0;" && "START = 0;".
		//option allow_alias = true;
		INITIALISIEREN = 0;
		BEENDEN = 1;
	}
	//message NachrichtenInhalt {
	//	required string nachrichtenInhalt = 1;
	//	optional KontrollTyp kontrollTyp = 2;
	//}

	required string sourceIP = 1;
	required int32 sourcePort = 2;
	required int32 sourceID = 3;
	required NachrichtenTyp nachrichtenTyp = 4 [default = ANWENDUNGSNACHRICHT];
	optional KontrollTyp kontrollTyp = 5 [default = INITIALISIEREN];
	required string nachrichtenInhalt = 6;
	optional string zeitStempel = 7;
}
